Updated Styling + Changed background to dark color - Adjusted text to be readable - Resized font on cards + Made selector button centered with card + Moved onClick from <div> to <app-selector-btn> + Card height is no longer variable based on text + Adjusted max size of selector-btn

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -12,12 +12,13 @@
     object-fit: cover;
     margin-right: auto;
     margin-left: auto;
+    cursor: pointer;
+
 }
 
 div {
     background-color: transparent;
     border: 3px solid blue;
-    cursor: pointer;
     outline: none;
     padding: 0px;
     width: 300px;
@@ -34,12 +35,22 @@ h2 {
     text-align: center;
     border: 3px solid green;
     font-family: 'Open Sans';
-    font-size: 30px;
+    font-size: 25px;
     max-width:300px;
+    height: 60px;
+    line-height: 30px;
+    color: white;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+
+}
+
+app-selector-btn {
+    display: block;
+    border: 2px solid yellow;
+    text-align: center;  
 
 }
