--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import './assets/fonts/stylesheet.css'
+@import './assets/fonts/stylesheet.css';
+
+body {
+    background-color: #222831;
+}
